<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>itri_bus_sensor_kit_description</name>
  <version>0.1.0</version>
  <description>The itri_bus_sensor_kit_description package</description>
  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
  <maintainer email="devansh.mehta@robotiz3d.com">Devansh Mehta</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>velodyne_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
